syntax = "proto3";

package contactperson;

import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/sklyar/ad-booking/backend/api/gen/contactperson";

service Service {
  rpc Create(CreateRequest) returns (CreateResponse);
}

message CreateRequest {
  string name = 1 [(buf.validate.field).string.min_len = 1];
  string vk_id = 2 [(buf.validate.field).string.min_len = 1];
}

message CreateResponse {
  ContactPerson contact_person = 1;
}

message ContactPerson {
  uint64 id = 1;
  string name = 2;
  string vk_id = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}
